# microgroove

./: .gitignore  Cargo.toml  Embed.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci_checks.yml
firmware/: Cargo.toml
firmware/microgroove_app/src/: display.rs  encoder.rs  input.rs  main.rs  midi.rs  peripherals.rs
firmware/microgroove_sequencer/: Cargo.toml
firmware/microgroove_sequencer/src/: lib.rs  machine.rs  machine_resources.rs  midi.rs  part.rs  quantizer.rs  sequence_generator.rs  sequencer.rs
firmware/microgroove_sequencer/src/machine/: euclidean_rhythm_machine.rs  grids_rhythm_machine.rs  rand_melody_machine.rs  unit_machine.rs
hardware/: bom.csv  fp-info-cache  fp-lib-table  microgroove-circuit.fzz  microgroove.kicad_prl  microgroove.kicad_pro  microgroove.kicad_sch  sym-lib-table
hardware/lib/H11L1/: DIP762W46P254L889H508Q6B.kicad_mod
hardware/lib/NHD-2/: NHD-2.7-12864WDW3-M.kicad_sym  NHD2712864WDW3-M.kicad_mod
hardware/lib/NHD-2.7-12864WDW3/: NHD-2.7-12864WDW3.bak  NHD-2.7-12864WDW3.dcm  NHD-2.7-12864WDW3.kicad_sym  NHD-2.7-12864WDW3.lib  NHD-2.7-12864WDW3.mod  NHD2712864WDW3.kicad_mod
hardware/lib/PEC11R_4215F_S0024/: PEC11R-4215F-S0024.kicad_sym  XDCR_PEC11R-4215F-S0024.kicad_mod
hardware/lib/SJ1_3513/: CUI_SJ1-3513.kicad_mod  SJ1-3513.kicad_sym  SJ1-3513.lib
hardware/lib/SW4_TL1100F160Q6JBLK_EWI/: SW4_TL1100F160Q6JBLK_EWI.kicad_sym
hardware/lib/SW4_TL1100F160Q6JBLK_EWI/footprints.pretty/: SW4_TL1100F160Q6JBLK_EWI.kicad_mod
hardware/lib/UJ2-MIBH-4-SMT-TR/: CUIDEVICES_UJ2-MIBH-4-SMT-TR.kicad_mod  UJ2-MIBH-4-SMT-TR.kicad_sym
hardware/lib/rp_pico/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
microgroove_app/: Cargo.toml
microgroove_app/src/: display.rs  encoder.rs  input.rs  main.rs  midi.rs  peripherals.rs
microgroove_sequencer/: Cargo.toml
microgroove_sequencer/src/: lib.rs  machine.rs  machines.rs  midi.rs  param.rs  params.rs  quantizer.rs  sequence_generator.rs  sequencer.rs
microgroove_sequencer/src/machine/: euclidean_groove_machine.rs  euclidean_rhythm_machine.rs  grids_rhythm_machine.rs  rand_melody_machine.rs  unit_machine.rs
microgroove_sequencer/src/machines/: rand_melody_machine.rs  unit_machine.rs
src/: button_repro.rs  hardware_interface_poc.rs  main.rs  oled_poc.rs  spaghetti.rs
