[package]
name = "microgroove"
version = "0.2.0"
authors = ["afternoon <ben@ben2.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/afternoon/microgroove"
repository = "https://github.com/afternoon/microgroove"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1.3"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.7"
fugit = "0.3.6"
heapless = "0.7.16"
panic-probe = "0.3.0"
rotary-encoder-hal = "0.5.0"
rp-pico = "0.5.0"
ssd1306 = "0.7.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
